form submit button fix color contrast

--- a/style/style.scss
+++ b/style/style.scss
@@ -115,7 +115,8 @@ body {
             border: none;
             border-radius: 5px;
             padding: 1rem 0;
-            color: #fff;
+            // color: #fff;
+            color: #474747;
             font-family: "Poppins";
             font-weight: 600;
             letter-spacing: 0.05rem;
